starting on navbar

--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "dev": "npm run dev --prefix client & npm run start --prefix server"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "react-bootstrap": "^2.8.0"
+  }
 }
