--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "react-bootstrap": "^2.8.0",
+    "react-dropdown": "^1.11.0",
     "react-router-dom": "6.4"
   }
 }
