--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "react-bootstrap": "^2.8.0",
     "react-dropdown": "^1.11.0",
     "react-router-dom": "6.4"
