--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^7.4.2"
+    "mongoose": "^7.4.2",
+    "react-bootstrap": "^2.8.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
