--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Sam Shock",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.1",
     "express": "^4.18.2",
     "mongoose": "^7.4.2",
     "react-bootstrap": "^2.8.0"
