--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "mysql": "^2.18.1",
+    "pg": "^8.11.3",
     "react-bootstrap": "^2.8.0",
     "react-dropdown": "^1.11.0",
     "react-router-dom": "6.4"
