--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.4.2",
+    "mysql": "^2.18.1",
+    "pg": "^8.11.3",
     "react-bootstrap": "^2.8.0"
   },
   "devDependencies": {
